# docker-kubernetes

./: .gitignore  README.md
000-multi-stage/src/: main.rs
001-deployments/: Cargo.toml  Dockerfile  config.yaml
002-service/: .dockerignore  Dockerfile  app.js  k8s.yaml  package-lock.json  package.json
003-compose/: docker-compose.yml
004-kubernetes-deployment/: Dockerfile  deployment.yml  master-deployment.yml  service.yml
