[package]
name = "multi-stage"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1


[target.x86_64-unknown-linux-musl]
rustflags = [
    "-C", "target-feature=-crt-static"
]

[dependencies]
rocket = {version = "=0.5.1", features = ["json"]}
serde_json = "1.0.122"